--- a/package.json
+++ b/package.json
@@ -15,13 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "rename": "renamer --find App-clear.js --replace App.js ./src/App-clear.js && renamer --find style.css --replace index.css ./src/style.css ",
-    "remove-demo": "rimraf ./src/assets ./src/components ./src/pages ./src/Routes.js ./src/App.js ./src/index.css && npm run rename"
-  },
-  "devDependencies": {
-    "renamer": "^1.0.0",
-    "rimraf": "^2.6.2"
+    "eject": "react-scripts eject"
   },
   "browserslist": [
     ">0.2%",
