--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "moviebox",
   "version": "0.1.0",
   "private": true,
-  "// If You want to install mdbreact from our GitLab repository, please replace '4.21.0' with gitURL provided here ->": "git+https://oauth2:<YOUR-TOKEN-GOES-HERE>@git.mdbootstrap.com/mdb/react/re-pro.git",
   "dependencies": {
     "axios": "^0.19.0",
     "mdbreact": "4.21.0",
@@ -22,5 +21,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "dotenv": "^8.2.0"
+  }
 }
